--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "private": true,
   "dependencies": {
     "@100mslive/react-sdk": "^0.6.1",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
+    "@giphy/js-fetch-api": "^5.4.0",
+    "@giphy/react-components": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "emoji-mart": "^5.5.2",
     "firebase": "^8.3.1",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^2.2.0",
+    "react-giphy-searchbox": "^1.5.4",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.4",
+    "styled-components": "^6.1.8",
+    "tslib": "^2.6.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
